<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="bxute.readmore.DetailsActivity">

        <include layout="@layout/toolbar" />

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/cover_art"
            android:layout_width="@dimen/cover_art_width"
            android:layout_height="@dimen/cover_art_height"
            android:layout_below="@+id/toolbar"
            android:layout_margin="8sp"
            fresco:placeholderImage="@drawable/book" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar"
            android:layout_toEndOf="@+id/cover_art"
            android:padding="8dp"
            android:textColor="@color/primaryTextColor"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:layout_toEndOf="@+id/cover_art"
            android:padding="8dp" />


        <TextView
            android:id="@+id/pub_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/author"
            android:layout_toEndOf="@+id/cover_art"
            android:padding="8dp" />

        <LinearLayout
            android:id="@+id/favorite_wrapper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pub_date"
            android:layout_toEndOf="@+id/cover_art"
            android:background="@drawable/fav_bg"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/favorite_icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_below="@+id/pub_date"
                android:layout_toEndOf="@+id/cover_art"
                android:gravity="center"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:text="@string/favorite_text_icon"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/favorite_caption"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:paddingBottom="8dp"
                android:paddingEnd="8dp"
                android:paddingStart="8dp"
                android:paddingTop="8dp"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

        </LinearLayout>


        <FrameLayout
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/cover_art"
            android:layout_margin="8dp"
            android:background="@color/dividerColor" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/divider"
            android:lineSpacingExtra="4dp"
            android:padding="8dp"
            android:textColor="@color/primaryTextColor"
            android:textSize="18sp" />

    </RelativeLayout>
</ScrollView>