...
    <string name="menu_remove_from_favorite">Remove From Favorite</string>
    <string name="add_caption">Add To Favorite</string>
    <string name="remove_caption">Remove From Favorite</string>
    <string name="favorite_page_title">Favorites</string>
    <string name="no_internet">No Internet Connection !</string>
    <string name="no_title" />
    <string name="book_fragment_title">Books</string>
    <string name="magazines_page__title">Magazines</string>
    <string name="favorite_dialog_title">Favorites</string>
    <string name="add">Add</string>
    <string name="postfix">To Favorites</string>
    <string name="add_btn">ADD</string>
    <string name="cancel_btn">CANCEL</string>
    <string name="parcel_key">parcel</string>
...
