...
    </RelativeLayout>

    <RelativeLayout
        android:background="?android:selectableItemBackground"
        android:layout_marginBottom="2dp"
        android:layout_below="@+id/header_wrapper"
        android:id="@+id/favorites_wrapper"
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <TextView
            android:textSize="24sp"
            android:gravity="center"
...


    <RelativeLayout
        android:background="?android:selectableItemBackground"
        android:layout_marginTop="2dp"
        android:layout_below="@+id/favorites_wrapper"
        android:id="@+id/logout_wrapper"
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <TextView
            android:textSize="24sp"
            android:gravity="center"
...
