<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="bxute.readmore.fragments.BooksFragment">

    <ProgressBar
        android:layout_centerInParent="true"
        android:id="@+id/progressBar"
        android:layout_width="@dimen/progress_dimen"
        android:layout_height="@dimen/progress_dimen" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/books_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</RelativeLayout>
